{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 301,
  "lineage": "c077dbdd-30d1-00cf-0b6b-00f7c6924ffa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "keita-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e9692dc8706a826",
            "associate_with_private_ip": "10.0.0.50",
            "association_id": "eipassoc-047c5c73729e31d8c",
            "domain": "vpc",
            "id": "eipalloc-09e9692dc8706a826",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e6eabd5980605c12",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-50-17-236-28.compute-1.amazonaws.com",
            "public_ip": "50.17.236.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.keita-gw",
            "aws_network_interface.keita",
            "aws_security_group.keita-terraform-demo",
            "aws_subnet.keita-public-subnet-A",
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "keita-demo-terraform-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:320352301616:instance/i-0d3572eeac8b7cb99",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3572eeac8b7cb99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "done",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e6eabd5980605c12"
              }
            ],
            "primary_network_interface_id": "eni-0e6eabd5980605c12",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.50",
            "public_ip": "50.17.236.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04164f3099734786a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05267086fc47ed1e7",
            "tags": {
              "Name": "keita-demo-terraform-ec2"
            },
            "tags_all": {
              "Name": "keita-demo-terraform-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0774334f8d4a66eaf"
            ]
          },
          "dependencies": [
            "aws_network_interface.keita",
            "aws_security_group.keita-terraform-demo",
            "aws_subnet.keita-public-subnet-A",
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "keita-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320352301616:internet-gateway/igw-0381469ccea4473c4",
            "id": "igw-0381469ccea4473c4",
            "owner_id": "320352301616",
            "tags": {
              "Name": "keita-gw"
            },
            "tags_all": {
              "Name": "keita-gw"
            },
            "vpc_id": "vpc-044f927ac74ccc0c8"
          },
          "dependencies": [
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "keita",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320352301616:network-interface/eni-0e6eabd5980605c12",
            "id": "eni-0e6eabd5980605c12",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e3:0d:aa:7f:9f",
            "owner_id": "320352301616",
            "private_ip": "10.0.0.50",
            "private_ip_list": [
              "10.0.0.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0774334f8d4a66eaf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05267086fc47ed1e7"
          },
          "dependencies": [
            "aws_security_group.keita-terraform-demo",
            "aws_subnet.keita-public-subnet-A",
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "keita-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320352301616:route-table/rtb-084c50877585846ca",
            "id": "rtb-084c50877585846ca",
            "owner_id": "320352301616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0381469ccea4473c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "keita-route-table"
            },
            "tags_all": {
              "Name": "keita-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f927ac74ccc0c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.keita-gw",
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Keita-public-RT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccfb630d8605a9ec",
            "route_table_id": "rtb-084c50877585846ca",
            "subnet_id": "subnet-05267086fc47ed1e7"
          },
          "dependencies": [
            "aws_internet_gateway.keita-gw",
            "aws_route_table.keita-route-table",
            "aws_subnet.keita-public-subnet-A",
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Keita-public-RT-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a44dec9609dbb8a6",
            "route_table_id": "rtb-084c50877585846ca",
            "subnet_id": "subnet-0dbca8692e9c8a038"
          },
          "dependencies": [
            "aws_internet_gateway.keita-gw",
            "aws_route_table.keita-route-table",
            "aws_subnet.keita-public-subnet-B",
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "keita-terraform-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320352301616:security-group/sg-0774334f8d4a66eaf",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0774334f8d4a66eaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "keita-terraform-demo",
            "name_prefix": "",
            "owner_id": "320352301616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "keita-terraform-demo"
            },
            "tags_all": {
              "Name": "keita-terraform-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f927ac74ccc0c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "keita-public-subnet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320352301616:subnet/subnet-05267086fc47ed1e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05267086fc47ed1e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320352301616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "keita-public-subnet-A"
            },
            "tags_all": {
              "Name": "keita-public-subnet-A"
            },
            "vpc_id": "vpc-044f927ac74ccc0c8"
          },
          "dependencies": [
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "keita-public-subnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320352301616:subnet/subnet-0dbca8692e9c8a038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbca8692e9c8a038",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320352301616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "keita-public-subnet-B"
            },
            "tags_all": {
              "Name": "keita-public-subnet-B"
            },
            "vpc_id": "vpc-044f927ac74ccc0c8"
          },
          "dependencies": [
            "aws_vpc.keita-demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "keita-demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320352301616:vpc/vpc-044f927ac74ccc0c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7bae76d52974e0f",
            "default_route_table_id": "rtb-0c7705fc7b89f3550",
            "default_security_group_id": "sg-034714b7d56b5a7db",
            "dhcp_options_id": "dopt-07331f3d15736142b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-044f927ac74ccc0c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7705fc7b89f3550",
            "owner_id": "320352301616",
            "tags": {
              "Name": "keita-demo-vpc"
            },
            "tags_all": {
              "Name": "keita-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}